<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Voice Next Page</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txt_btn_start">Start</string>
    <string name="txt_btn_stop">Stop</string>
    <string name="txt_btn_back">Back</string>
    <string name="txt_btn_setting">Settings</string>
    <string name="txt_hoverText">Hover Text</string>
    <string name="txt_btn_enable">Enable Accessibility Service</string>
    <string name="txt_btn_about">About</string>
    <string name="txt_btn_reset">Reset</string>
    <string name="about_title">ABOUT</string>
    <string name="contributors">Contributors</string>
    <string name="server_title">Server: </string>
    <string name="port_title">Port: </string>
    <string name="txt_btn_overlay">Enable Overlay Permissions</string>
    <string name="hover_text">hovertext</string>
    <string name="help_title">HELP</string>
    <string name="commands">Supported Commands</string>
    <string name="txt_btn_help">Help</string>
   

    <string name="setting_lang_title">Choose language</string>


    <string name="pref_key_addr">key_addr</string>
    <string name="pref_key_port">key_port</string>
    <string name="pref_key_lang">key_lang</string>
    <!--
    <string name="pref_sec1">Server infor</string>
    <string name="default_server_addr">bark.phon.ioc.ee</string>
    <string name="default_server_port">82</string>
    <string name="default_server_app_status">/dev/duplex-speech-api/ws/status</string>
    <string name="default_server_app_speech">/dev/duplex-speech-api/ws/speech</string>
  -->

    <!-- SettingsActivity.java has hardcoded silvius-server.voxhub.io server and port --> 
    <string name="default_server_addr">silvius-server.voxhub.io</string>
    <string name="default_server_port">8022</string>
    <string name="default_server_app_status">client/ws/status</string>
    <string name="default_server_app_speech">client/ws/speech</string>

    <!--
    <string name="default_server_addr">163.221.94.22</string>
    <string name="default_server_port">11507</string>
    <string name="default_server_app_status">/ja/speech-api/ws/status</string>
    <string name="default_server_app_speech">/ja/speech-api/ws//speech</string>
-->
</resources>
