<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/server_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:text="@string/server_title"/>

    <EditText
        android:id="@+id/server"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_server_addr"
        android:layout_toRightOf="@+id/server_title"/>
    
    <TextView
        android:id="@+id/port_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:text="@string/port_title"
        android:layout_below="@+id/server"/>

    <EditText
        android:id="@+id/port"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_server_port"
        android:layout_below="@+id/server"
        android:layout_toRightOf="@+id/port_title"/>
    
    <TextView
        android:id="@+id/reset_blurb"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="10sp"
        android:layout_below="@+id/port"/>
    
    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:text="@string/txt_btn_reset"
        android:layout_below="@+id/port"
        android:layout_toRightOf="@+id/reset_blurb"/>

    <Switch
        android:id="@+id/hoverText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/txt_hoverText" 
        android:layout_below="@+id/port"/>
    
    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:text="@string/txt_btn_back"
        android:layout_below="@+id/hoverText"/>

</RelativeLayout>
