<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".AboutActivity">

    <TextView
        android:id="@+id/about_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/about_title"
        android:textStyle="bold"
        android:textSize="50sp"/>
    
    <TextView
        android:id="@+id/about_body"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:layout_below="@+id/about_title"/>

    <TextView
        android:id="@+id/contributors"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/contributors"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_below="@+id/about_body"/>
        
    <TextView
        android:id="@+id/contributors_body"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:layout_below="@+id/contributors"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_back"
        android:enabled="true"
        android:text="@string/txt_btn_back"
        android:background="@drawable/button_states"
        android:layout_below="@+id/contributors_body"/>
      
</RelativeLayout>
