<?xml version="1.0" encoding="utf-8"?> 
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/io.voxhub.accessibility.app"
        android:id="@+id/activity_dictation"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
<!--<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/io.voxhub.accessibility.app"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_dictation"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
-->
    <Button
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/btn_setting"
        android:enabled="true"
        android:background="@drawable/settings_icon"
        android:layout_marginRight="15dp"/>
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_enable"
        android:enabled="true"
        android:text="@string/txt_btn_enable"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/btn_start"
        android:enabled="false"
        android:text="@string/txt_btn_start"
        app:layout_constraintTop_toBottomOf="@+id/btn_enable"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/btn_stop"
        android:enabled="true"
        android:text="@string/txt_btn_stop"
        app:layout_constraintLeft_toRightOf="@+id/btn_start"
        android:layout_marginLeft="100dp"/>
 
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="[transcripts]"
        android:id="@+id/ed_result"
        app:layout_constraintTop_toBottomOf="@+id/progress_listening"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ProgressBar
        android:id="@+id/progress_listening"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:indeterminate="false"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/btn_start"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"></ProgressBar>

</android.support.constraint.ConstraintLayout>
